// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linux 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "notepad-1.0.0.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "notepad-1.0.0.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "notepad-1.0.0.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac 2`] = `
Object {
  "CFBundleDisplayName": "notepad",
  "CFBundleExecutable": "notepad",
  "CFBundleIconFile": "notepad.icns",
  "CFBundleIdentifier": "com.proton-native.notepad",
  "CFBundleName": "notepad",
  "CFBundleShortVersionString": "1.0.0",
  "NSHighResolutionCapable": true,
}
`;

exports[`win 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "notepad Setup 1.0.0.exe",
      "safeArtifactName": "notepad-Setup-1.0.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "notepad Setup 1.0.0.exe.blockmap",
      "safeArtifactName": "notepad-Setup-1.0.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win ia32 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "notepad Setup 1.0.0.exe",
      "safeArtifactName": "notepad-Setup-1.0.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "notepad Setup 1.0.0.exe.blockmap",
      "safeArtifactName": "notepad-Setup-1.0.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;
